# ps4o

./: .gitmodules  CMakeLists.txt  README.md
cmake/: default_build_type.cmake
include/: ps4o.hpp
include/ps4o/: base_case.hpp  classifier.hpp  config.hpp  local_classification.hpp  memory.hpp  parallel.hpp  partitioning.hpp  ps4o.hpp  ps4o_fwd.hpp  sampling.hpp  scheduler.hpp  sequential.hpp  synchronization.hpp  task.hpp  thread_pool.hpp  utils.hpp
src/: example.cpp
